--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Build and Publish Docker
 on:
   push:
     branches:
-      - main
+      - support-4.2
 
 jobs:
   build_and_push:
@@ -22,9 +22,10 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Prepare Image Tag
+        id: prep
         run: |
           BASE_REVISION=`grep "ARG BASE_REVISION" Dockerfile | cut -d "=" -f 2 | sed "s/^v//"`
           RELEASE_REVISION=`grep "ARG RELEASE_REVISION" Dockerfile | cut -d "=" -f 2`
@@ -33,6 +34,14 @@ jobs:
 
           echo "Building $FULL_IMAGE_NAME:$IMAGE_TAG"
 
-          docker build -t ${FULL_IMAGE_NAME}:${IMAGE_TAG} .
-          docker push ${FULL_IMAGE_NAME}:${IMAGE_TAG}
+          echo ::set-output name=name::${FULL_IMAGE_NAME}
+          echo ::set-output name=tag::${IMAGE_TAG}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ steps.prep.outputs.name }}:${{ steps.prep.outputs.tag }}
+          cache-from: type=registry,ref=${{ steps.prep.outputs.name }}:support-4.2
+          cache-to: type=registry,ref=${{ steps.prep.outputs.name }}:support-4.2,mode=max
 
