--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <name>midpoint extension project</name>
     <groupId>jp.openstandia</groupId>
     <artifactId>midpoint-extension</artifactId>
-    <version>4.3</version>
+    <version>4.4-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>midPoint extension project</description>
 
@@ -43,13 +43,13 @@
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
             <artifactId>model-impl</artifactId>
-            <version>4.3</version>
+            <version>4.4-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.gui</groupId>
             <artifactId>admin-gui</artifactId>
-            <version>4.3</version>
+            <version>4.4-SNAPSHOT</version>
             <scope>compile</scope>
             <classifier>classes</classifier>
             <exclusions>
