fix(4.4): update to 50117cc036f450cede53f87b6a7b25adca25821f

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Prepare Image Tag
         id: prep
         run: |
-          BASE_REVISION=`grep "ARG BASE_REVISION" Dockerfile | cut -d "=" -f 2 | sed "s/^v//" | head -n 1`
+          BASE_IMAGE_TAG=`grep "ARG BASE_IMAGE_TAG" Dockerfile | cut -d "=" -f 2 | sed "s/^v//" | head -n 1`
           RELEASE_REVISION=`grep "ARG RELEASE_REVISION" Dockerfile | cut -d "=" -f 2`
-          IMAGE_TAG=${BASE_REVISION}-${RELEASE_REVISION}
+          IMAGE_TAG=${BASE_IMAGE_TAG}-${RELEASE_REVISION}
           FULL_IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/${IMAGE_NAME}
 
           echo "Building $FULL_IMAGE_NAME:$IMAGE_TAG"
