--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ name: Build and Publish Docker
 on:
   push:
     branches:
+      - support-4.8
       - support-4.4
       - support-4.3
 
@@ -43,6 +44,6 @@ jobs:
         with:
           push: true
           tags: ${{ steps.prep.outputs.name }}:${{ steps.prep.outputs.tag }}
-          cache-from: type=registry,ref=${{ steps.prep.outputs.name }}:support-4.4
-          cache-to: type=registry,ref=${{ steps.prep.outputs.name }}:support-4.4,mode=max
+          cache-from: type=registry,ref=${{ steps.prep.outputs.name }}:support-4.8
+          cache-to: type=registry,ref=${{ steps.prep.outputs.name }}:support-4.8,mode=max
 
