--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <name>midpoint extension project</name>
     <groupId>jp.openstandia</groupId>
     <artifactId>midpoint-extension</artifactId>
-    <version>4.4.1</version>
+    <version>4.4.6</version>
     <packaging>jar</packaging>
     <description>midPoint extension project</description>
 
@@ -17,12 +17,12 @@
         <repository>
             <id>evolveum</id>
             <name>Evolveum Public Releases</name>
-            <url>http://nexus.evolveum.com/nexus/content/groups/public</url>
+            <url>https://nexus.evolveum.com/nexus/content/groups/public</url>
         </repository>
         <repository>
             <id>evolveum-snapshots</id>
             <name>Evolveum Snapshots</name>
-            <url>http://nexus.evolveum.com/nexus/content/repositories/snapshots/</url>
+            <url>https://nexus.evolveum.com/nexus/content/repositories/snapshots/</url>
         </repository>
     </repositories>
 
@@ -35,12 +35,12 @@
         <pluginRepository>
             <id>evolveum</id>
             <name>Evolveum Public Releases</name>
-            <url>http://nexus.evolveum.com/nexus/content/groups/public</url>
+            <url>https://nexus.evolveum.com/nexus/content/groups/public</url>
         </pluginRepository>
         <pluginRepository>
             <id>evolveum-snapshots</id>
             <name>Evolveum Snapshots</name>
-            <url>http://nexus.evolveum.com/nexus/content/repositories/snapshots/</url>
+            <url>https://nexus.evolveum.com/nexus/content/repositories/snapshots/</url>
         </pluginRepository>
     </pluginRepositories>
 
@@ -53,13 +53,13 @@
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
             <artifactId>model-impl</artifactId>
-            <version>4.4.1</version>
+            <version>4.4.6</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.gui</groupId>
             <artifactId>admin-gui</artifactId>
-            <version>4.4.1</version>
+            <version>4.4.6</version>
             <scope>compile</scope>
             <classifier>classes</classifier>
             <exclusions>
