--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <name>midpoint extension project</name>
     <groupId>jp.openstandia</groupId>
     <artifactId>midpoint-extension</artifactId>
-    <version>4.4.8</version>
+    <version>4.4.9</version>
     <packaging>jar</packaging>
     <description>midPoint extension project</description>
 
@@ -45,21 +45,22 @@
     </pluginRepositories>
 
     <properties>
-        <project.source.version>1.8</project.source.version>
+        <project.source.version>11</project.source.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <surefire.version>3.0.0-M5</surefire.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
             <artifactId>model-impl</artifactId>
-            <version>4.4.8</version>
+            <version>4.4.9</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.gui</groupId>
             <artifactId>admin-gui</artifactId>
-            <version>4.4.8</version>
+            <version>4.4.9</version>
             <scope>compile</scope>
             <classifier>classes</classifier>
             <exclusions>
@@ -78,8 +79,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${project.source.version}</source>
+                    <target>${project.source.version}</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -91,6 +92,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.1.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit-platform</artifactId>
+                        <version>${surefire.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
         <resources>
