fix(4.0): update to 80a6fdf4a37411856bbc732d257d4e8797ecd7e5
- Backport multiaccount outbound from v4.2

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Build and Publish Docker
 on:
   push:
     branches:
-      - support-4.0
+      - support-4.0-multiaccount-outbound
 
 jobs:
   build_and_push:
